feat: show index anime generator

--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
     <main>
         <div class="container mt-5">
             <div>
-                <h1>Anime Quote Generator</h1>
+                <h1>Anime Quote Generator (<span id="pos">0</span>/<span id="total">0</span>)</h1>
                 <div class="d-flex mt-3">
                     <button id="btn_quote_before"
-                        class="btn btn-primary d-flex align-items-center px-4 py-2 justify-content-center mt-4">
-                        <span class="txt font-weight-bold text-uppercase">Previous Quote</span>
+                        class="btn_quote btn btn-primary d-flex align-items-center px-4 py-2 justify-content-center mt-4">
+                        <span class="txt font-weight-bold text-uppercase">Previous</span>
                     </button>
                     <button id="btn_quote"
-                        class="btn btn-primary d-flex align-items-center px-4 py-2 justify-content-center mt-4">
-                        <span class="txt font-weight-bold text-uppercase">Next Quote</span>
+                        class="btn_quote btn btn-primary d-flex align-items-center px-4 py-2 justify-content-center mt-4">
+                        <span class="txt font-weight-bold text-uppercase">Next</span>
                     </button>
                 </div>
                 <div class="mt-3">
