--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div>
                 <h1>Anime Quote Generator (<span id="pos">0</span>/<span id="total">0</span>)</h1>
                 <div class="d-flex mt-3">
-                    <button id="btn_quote_before"
+                    <button id="btn_quote_before" disabled
                         class="btn_quote btn btn-primary d-flex align-items-center px-4 py-2 justify-content-center mt-4">
                         <span class="txt font-weight-bold text-uppercase">Previous</span>
                     </button>
@@ -32,7 +32,7 @@
                 </div>
                 <div class="mt-3">
                     <div id="quote" class="content mt-3">
-                        <div class="card">
+                        <div class="card shadow-sm">
                             <div class="card-body">
                                 <div class="card-text">
                                     <blockquote class="blockquote mb-0">
