--- a/index.html
+++ b/index.html
@@ -17,20 +17,10 @@
 
 <body>
     <main>
-        <div class="container mt-5">
+        <div class="container mt-3 mt-md-5">
             <div>
                 <h1>Anime Quote Generator (<span id="pos">0</span>/<span id="total">0</span>)</h1>
-                <div class="d-flex mt-3">
-                    <button id="btn_quote_before" disabled
-                        class="btn_quote btn btn-primary d-flex align-items-center px-4 py-2 justify-content-center mt-4">
-                        <span class="txt font-weight-bold text-uppercase">Previous</span>
-                    </button>
-                    <button id="btn_quote"
-                        class="btn_quote btn btn-primary d-flex align-items-center px-4 py-2 justify-content-center mt-4">
-                        <span class="txt font-weight-bold text-uppercase">Next</span>
-                    </button>
-                </div>
-                <div class="mt-3">
+                <div class="mt-4">
                     <div id="quote" class="content mt-3">
                         <div class="card shadow-sm">
                             <div class="card-body">
@@ -48,6 +38,16 @@
                             </div>
                         </div>
                     </div>
+                </div>
+                <div class="d-flex mt-1">
+                    <button id="btn_quote_before" disabled
+                        class="btn_quote btn btn-primary d-flex align-items-center px-4 py-2 justify-content-center mt-4">
+                        <span class="txt font-weight-bold text-uppercase">Previous</span>
+                    </button>
+                    <button id="btn_quote"
+                        class="btn_quote btn btn-primary d-flex align-items-center px-4 py-2 justify-content-center mt-4">
+                        <span class="txt font-weight-bold text-uppercase">Next</span>
+                    </button>
                 </div>
             </div>
         </div>
